# hole-backend-rust

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
migrations/2022-03-11-065048_create_posts/: up.sql
migrations/2022-03-15-104943_create_comments/: up.sql
migrations/postgres/2022-03-21-155550_create_posts/: up.sql
migrations/postgres/2022-03-21-162914_create_users/: up.sql
migrations/postgres/2022-03-21-164718_create_comments/: up.sql
migrations/postgres/2022-08-18-234900_add_room_id/: down.sql  up.sql
migrations/postgres/2022-10-15-161115_post_reaction/: down.sql  up.sql
migrations/postgres/2023-05-05-135236_post_add_index_for_attentions/: down.sql  up.sql
migrations/sqlite3/2022-03-11-065048_create_posts/: up.sql
migrations/sqlite3/2022-03-15-061041_create_users/: up.sql
migrations/sqlite3/2022-03-15-104943_create_comments/: up.sql
psql-docker-init/: add_pg_trgm.sh
src/: cache.rs  cors.rs  db_conn.rs  login.rs  main.rs  models.rs  random_hasher.rs  rds_conn.rs  rds_models.rs  schema.rs
src/api/: attention.rs  comment.rs  mod.rs  operation.rs  post.rs  reaction.rs  search.rs  systemlog.rs  upload.rs  vote.rs
src/libs/: diesel_logger.rs  mod.rs
tools/: migdb.py
