[package]
name = "hole-thu"
version = "0.1.0"
edition = "2021"
license = "WTFPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["mastlogin"]
mastlogin = ["reqwest"]

[dependencies]
rocket = { version = "=0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "=0.1.0-rc.2", features = ["diesel_postgres_pool"] }
diesel = { version = "1.4.8", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
redis = { version="0.23.0", features = ["aio", "tokio-comp"] }
chrono = { version="0.4.19", features = ["serde"] }
rand = "0.8.5"
dotenv = "0.15.0"
sha2 = "0.10.2"
log = "0.4.16"
env_logger = "0.9.0"
web-push = "0.9.2"
url = "2.2.2"
futures = "0.3.24"
futures-util = "0.3.24"

reqwest = { version = "0.11.10", features = ["json"], optional = true }
